Changed font specification from 'monospace' to '-moz-fixed' to enforce fixed-width fonts always. b=58098 r=dbaron,rickg a=buster